fixing logo, hopefully spacing

--- a/treevets/styles.css
+++ b/treevets/styles.css
@@ -29,6 +29,10 @@ body {
     text-decoration: none;
 }
 
+.navbar .logo img {
+	width: 50px;
+	height: 50px;
+
 .navbar .nav-links {
     display: flex;
     list-style: none;
